# klayout-klink

./: .gitignore  25d-view.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  architecture.html  case-drc-chat.html  case-fit-lvs-chat.html  case-gf-reroute-chat.html  case-hallbar-chat.html  concepts.html  drc-lvs.html  examples.html  features.html  index.html  mcp-reference.html  plugin-packages.html  pyproject.toml  quickstart.html  robots.txt  sitemap.xml  tutorial-ebl-wraparound.html  tutorial-fit-device.html  tutorial-gf-mzi.html  tutorial-gf-ports.html  tutorial-hallbar.html  tutorial-multiwindow.html  tutorial-neural-electrode.html  tutorial-padframe.html  tutorial-passives.html  tutorials.html  workflows.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: app.js  styles.css
docs/public/: 25d-view.md  25d-view.zh-CN.md  README.md  README.zh-CN.md  api-stability.md  api-stability.zh-CN.md  architecture.md  architecture.zh-CN.md  control-plane.md  control-plane.zh-CN.md  demos.md  demos.zh-CN.md  drc-lvs-agent-handout.md  drc-lvs-agent-handout.zh-CN.md  drc-lvs.md  drc-lvs.zh-CN.md  getting-started.md  getting-started.zh-CN.md  interactive-workflows.md  interactive-workflows.zh-CN.md  plugin-packages.md  plugin-packages.zh-CN.md  project-model.md  project-model.zh-CN.md  recipes.md  recipes.zh-CN.md
en/: 25d-view.html  architecture.html  case-drc-chat.html  case-fit-lvs-chat.html  case-gf-reroute-chat.html  case-hallbar-chat.html  concepts.html  drc-lvs.html  examples.html  features.html  index.html  mcp-reference.html  plugin-packages.html  quickstart.html  tutorial-ebl-wraparound.html  tutorial-fit-device.html  tutorial-gf-mzi.html  tutorial-gf-ports.html  tutorial-hallbar.html  tutorial-multiwindow.html  tutorial-neural-electrode.html  tutorial-padframe.html  tutorial-passives.html  tutorials.html  workflows.html
examples_klink/public/: README.md  sync_to_template.py
examples_klink/public/demos/: _multilayer_engine.py  chat_to_netlist_pnr.py  fit_device_pnr_lvs.py  gf_mzi_module.py  multilayer_pnr_lvs.py  padframe_pnr_lvs.py
examples_klink/public/features/: 23_gdsfactory_route_to_klayout.py  24_gdsfactory_route_ports.py  25_gdsfactory_net_examples.py  26_gdsfactory_component_marker.py  29_gdsfactory_width_mismatch.py  30_gdsfactory_routing_zoo.py  anchor_port_5_example.py  anchor_port_5_example_pya.py  harness_generator.py  measurement_import_demo.py  neuro_probe_gen.py  profile_drc_gate.py  router_damped_stress.py  router_future_failure_showcase.py  router_missing_algorithm_stress.py  router_steiner_stress.py  stack_25d_view.py  tapered_5_example.py  (+4 more)
klink/: __init__.py  _meta.py  cli.py  client.py  doctor.py  errors.py  ext.py  handshake.py  process_stack.py  stack25d.py  transfer.py  transport.py  types.py
klink/anchor/: __init__.py  inference.py  naming.py  workflow.py
klink/domains/: __init__.py
klink/mcp/: CLAUDE.md  README.md  __main__.py  bridge.py  catalog.py  config.py  connection.py  diagnostics.py  guide.py  interaction_context.py  profiles.py  registry.py  results.py  server.py  session.py  session_registry.py
klink/plugin_payload/: README.md
klink/port/: __init__.py  blackbox.py  inference.py  naming.py  validation.py  workflow.py
klink/routing/: __init__.py
klink/spec/: __init__.py  v1.py
klink_plugin/: grain.xml
klink_plugin/pymacros/: klink.lym
rust/klink_boxmaze/: Cargo.toml  README.md  pyproject.toml
rust/klink_boxmaze/src/: lib.rs
rust/klink_trackmaze/: Cargo.toml  pyproject.toml
rust/klink_trackmaze/src/: lib.rs
tests/public/: synth_pdk.py  test_bounded_router_public.py  test_clean_pdn_public.py  test_logic_map_public.py  test_pcell_fitter.py  test_process_profile_public.py  test_process_stack_public.py  test_profile_drc_public.py  test_recipes_public.py  test_reference_netlist_public.py  test_scale_pipeline_public.py  test_sizing_public.py  test_stack25d_public.py  test_structdevice_pcell_math.py  test_yosys_public.py
tests/unit/: conftest.py  test_agent_lanes.py  test_anchor_inference.py  test_backend_isolation.py  test_blackbox_ports.py  test_bounded_router_rs.py  test_capacity_grid.py  test_cli_plugin.py  test_cli_update.py  test_client_disconnect.py  test_device_extractor.py  test_doctor.py  test_ext_plugins.py  test_extracted_netlist.py  test_feature_grid.py  test_feature_grid_3d.py  test_flexdr.py  test_flexpa_t2.py  test_floorplan.py  test_gdsfactory_components.py  test_gdsfactory_ports.py  test_gf_import.py  test_global_router.py  test_handshake.py  test_import_closure.py  test_interaction_context.py  test_klayout_native_copy_semantics.py  test_klive_compat.py  test_legality_t5b.py  test_maze_t5c.py  test_mcp_discovery.py  test_mcp_guide.py  test_mcp_lifecycle.py  test_mcp_profiles.py  test_mcp_register.py  test_mcp_tools_snapshot.py  test_nanodevice_basic_layout.py  test_nanodevice_complex_example.py  test_nanodevice_flake.py  test_nanodevice_klayoutclaw_baseline.py  (+51 more)
tools/tutorial_capture/: README.md
(+252 files in other folders)
